<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/logo"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_kunde"
            android:icon="@drawable/logo"
            android:title="@string/kunden" />

        <item
            android:id="@+id/nav_kategorien"
            android:icon="@drawable/logo"
            android:title="@string/kategorien" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/logo"
            android:title="Feedback" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/logo"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_uebung"
                android:icon="@drawable/logo"
                android:title="Übungen" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/logo"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
